--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,7 @@ h1 {
 
     .sidebar nav {
         flex-direction: row;
+        width: auto;
         flex-wrap: nowrap;
         overflow-x: auto;
         gap: 1rem;
@@ -260,8 +261,8 @@ h1 {
     }
 
     .profile {
-        padding-bottom: 0;
-        margin-top: 0;
+        padding-bottom: 1rem;
+        margin-top: 1rem;
     }
 
     .main {
@@ -274,7 +275,7 @@ h1 {
     }
 
     .cards {
-        flex-direction: column;
+        flex-direction: row;
         gap: 1rem;
     }
 
