--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ h1 {
 
     .sidebar {
         flex-direction: row;
-        width: 100%;
+        width: auto;
         height: auto;
         padding: 0.5rem 1rem;
         border-radius: 0;
@@ -274,7 +274,7 @@ h1 {
     }
 
     .cards {
-        flex-direction: row;
+        flex-direction: column;
         gap: 1rem;
     }
 
